--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,38 +4,23 @@ android-compileSdk = "35"
 android-minSdk = "24"
 android-targetSdk = "35"
 kotlin = "2.2.0"
-compose-material3 = "1.3.2"
 androidx-activityCompose = "1.10.1"
-kotlinStdlib = "2.2.0"
-runner = "1.5.2"
-core = "1.5.0"
-junit = "1.2.1"
 koin-bom = "4.1.0"
 roomKtx = "2.7.2"
-gson = "2.13.1"
 ksp = "2.1.21-2.0.2"
 ktor = "3.1.3"
 composeBom = "2025.06.01"
-composeComponents = "1.9.0-beta01"
 androidx-lifecycle = "2.9.1"
 navigationCompose = "2.9.1"
 coilCompose = "3.2.0"
-mokko = "0.23.0"
-coreKtx = "1.16.0"
+mockk = "1.14.4"
+turbine = "1.2.1"
+kotlinxCoroutinesTest = "1.10.2"
 
 [libraries]
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-compose-resources = { group = "org.jetbrains.compose.components", name = "components-resources", version.ref = "composeComponents" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
 androidx-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
@@ -58,7 +43,10 @@ room-gradle = { module = "androidx.room:room-gradle-plugin", version.ref = "room
 
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
 coil-network  = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coilCompose" }
-mokko = { module = "dev.icerock.moko:resources", version.ref = "mokko" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+mockk-common = { module = "io.mockk:mockk-common", version.ref = "mockk" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -68,4 +56,3 @@ kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref =
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-mokko-resources = { id = "dev.icerock.mobile.multiplatform-resources", version.ref = "mokko" }
